# speech-to-text

./: LICENSE  README.md  pyproject.toml
speech_to_text/: __main__.py  audio_transcriber.py  openai_api.py
speech_to_text/settings/: .gitignore
speech_to_text/utils/: word_merge.py
typings/: eel.pyi
web/: index.html  scripts.js  styles.css
