[project]
name = "speech-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "eel>=0.18.2",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "openai>=2.24.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "websockets>=16.0",
]
